<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/QS_nevigation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/QS_nevigation_title"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/QS_nevigation_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/QS_nevigation_finish"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/QS_nevigation_scan_again"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shape"
        android:text="@string/QS_nevigation_scan_again"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:onClick="scan_again"/>

    <Button
        android:id="@+id/QS_nevigation_mainPage"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shape2"
        android:text="@string/QS_nevigation_mainPage"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:onClick="mainPage"/>

</LinearLayout>