<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <EditText
        android:id="@+id/generateBarCodeText"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:minLines="4"
        android:layout_marginTop="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_shape"
        android:textColor="#000000"
        android:hint="@string/generateBarCodeTextHint"
        android:textColorHint="#AEA8A8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/barcodeclear"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/shape2"
            android:onClick="barcodeclear"
            android:layout_marginTop="25dp"
            android:text="@string/clear"
            android:layout_weight="1"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="45dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/barcodeBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape"
            android:onClick="barcodeBtn"
            android:text="@string/barcodeBtn"
            android:layout_weight="1"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="35dp"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/barcode_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="barcode_about"
        android:text="@string/barcode_about"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/purple_200"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/generateBarCodeImage"
        android:layout_width="288dp"
        android:layout_height="288dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"/>


</LinearLayout>
